--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,6 +23,9 @@
     --margin-left-right: 10px;
 
     --spectate-avatar-size: 5em;
+
+    white-space: nowrap;
+    
 }
 
 body {
